# openspades-voxlap

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
Plugin/: CMakeLists.txt  Context.cpp  Context.h  Main.cpp  OSSWRendererPlugin.h
Server/: CMakeLists.txt  Main.cpp  Server.cpp  Server.h  VoxlapStubs.cpp  VoxlapStubs.h
Server/Voxlap/: voxlap5.cpp  voxlap5.h  winmain.cpp
Shared/: OSSWRendererPlugin.h  OSVLLink.h
